--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
-  text-align: center;
+  background-color: #CAD3C8;
+  min-height: 100vh;
+  color: #2C3A47;
+  padding-top:60px;
+}
+
+.card-body {
+  background: #dee5dc;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
-  pointer-events: none;
 }
 
 .App-header {
