--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,10 @@
   color: #61dafb;
 }
 
+.highlight {
+  background-color: #fcf8c4;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
